# document_search

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  format.example
create_db/: Cargo.toml
create_db/src/: main.rs
law_search/: Cargo.toml
law_search/src/: main.rs
manage_db/: Cargo.toml
manage_db/src/: main.rs  prompt.rs
web_servevr/: Cargo.toml
web_servevr/src/: main.rs
web_servevr/static/: index.html
