[package]
name = "law_search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
fastembed = "3.8.0"
qdrant-client = "1.10.1"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"]}
ort = { version = "=2.0.0-rc.4", default-features = false, features = [ "ndarray" ] }
